--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
                 <div>Claim your KOIN with Kondor</div>
                 <button @click="claimKoins('use-kondor')">CLAIM KOIN</button>
               </div>
-              <div v-if="koinosWalletSelected === 'mkw'" class="input-group">
+              <!--<div v-if="koinosWalletSelected === 'mkw'" class="input-group">-->
                 <div>Claim your KOIN with My Koinos Wallet</div>
                 <button @click="claimKoins('use-mkw')">CLAIM KOIN</button>
-              </div>
+              <!--</div>-->
             </div>
           </div>
           <div class="flow-buttons">
